# ai4peace

./: README.md  pyproject.toml
ai4peace/concordia/: marketplace.py
ai4peace/core/: agent.py  gamemaster.py  simulation.py  simulation_runner.py
ai4peace/scenarios/: SCENARIOS.md  __init__.py  basic_ai_race.py
